--- a/Analisando_os_Dados_do_Airbnb.ipynb
+++ b/Analisando_os_Dados_do_Airbnb.ipynb
@@ -33,7 +33,7 @@
         "<img alt=\"Colaboratory logo\" width=\"15%\" src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/novo_logo_bg_claro.png\">\n",
         "\n",
         "#### **Data Science na Prática 3.0**\n",
-        "*by [sigmoidal.ai](https://sigmoidal.ai)*\n",
+        "*by André Almeida Santos*\n",
         "\n",
         "---\n",
         "\n",
